	* x0d: adds sleep() shared function
	* x0d: Fixed precompressed() handler.
	* plugins: new plugin "access" for basic IP & CIDR network based access control.
	* director: Adds an option to directly respond with 503 instead of enqueuing the request when the complete cluster is down.
	* director: Fixed bug in HTTP and FastCGI backends that caused hanging client connections on offline backends.
	* doc: x0d man-page extended to  describe error severities.

0.8.0 (2014-03-23)

	* base: Added Cidr API for general CIDR management.
	* flow: Added support for nested file parsing (via `#include "path"`), including filename globbing.
	* flow: Added new keyword `match` for optimized multi-branch pattern matching.
	* flow: Added CIDR notation for IPv4/IPv6 networks as native literal type.
	* flow: Dropped LLVM-dependency and run Flow on a dedicated VM.
	* flow: Properly implement power operator's disassociativety.
	* flow: Variables must not change type during lifetime.
	* flow: Every handler/function call statement and variable declaration must be followed by a semicolon ';'.
	* http: Fixed a bug that caused a crash when posting to a completion-callback into a connection to crash.
	* http: Fixed large requests that lead to a timeout or hang forever.
	* http: Improved client-side caching awareness for GET requests on static files.
	* http: Improved protocol error reporting.
	* director: Added experimental response output caching support.
	* director: Fixes 2 bugs (in http-backend and fastcgi backend) with regards to their connection ref-counting.
	* director: Added support for reconfiguring scheduling algorithm, including at runtime.
	* x0d: Added --dump-ast parameter to dump Flow's parsed AST.
	* x0d: plugin "vhost" has been removed in favor of the new match-keyword.
	* x0d: Adds --dump-ast and --dump-tc command line options to accompany --dump-ir (for debugging purposes).
	* x0d: Adds `request_header_buffer_size` config setup variable.